Regression: Driver editing popover menu closes while still hovered #105726

Closed
opened 2023-03-13 15:19:19 +01:00 by Simon Thommes · 3 comments
Member

System Information
Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-11 01:59, hash: b06edc289709
Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-08 01:06, hash: 809a336a3d67

Short description of error
When editing a driver using the popover menu it closes prematurely due to a moved mouse, even though the menu is still under the cursor.
bug_driver_popover_closing-2023-03-13_15.17.17.mp4

Exact steps for others to reproduce the error

  • add new driver (opening the popover)
  • move mouse downwards on top of the menu (for example to adjust the variable settings)
**System Information** Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-11 01:59, hash: `b06edc289709` Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-08 01:06, hash: `809a336a3d67` **Short description of error** When editing a driver using the popover menu it closes prematurely due to a moved mouse, even though the menu is still under the cursor. [bug_driver_popover_closing-2023-03-13_15.17.17.mp4](/attachments/e6a2eb9a-e4fa-403f-96e5-3eb43e733c64) **Exact steps for others to reproduce the error** - add new driver (opening the popover) - move mouse downwards on top of the menu (for example to adjust the variable settings)
Simon Thommes added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-13 15:19:20 +01:00
Simon Thommes changed title from Criver editing popover menu closes while still hovered to Driver editing popover menu closes while still hovered 2023-03-13 15:59:56 +01:00
Member

Yes, same as #105734

Yes, same as #105734
Harley Acheson added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-13 16:53:02 +01:00
Harley Acheson self-assigned this 2023-03-13 16:53:10 +01:00
Iliya Katushenock added the
Module
User Interface
Interest
Animation & Rigging
labels 2023-03-13 16:55:00 +01:00
Iliya Katushenock changed title from Driver editing popover menu closes while still hovered to Regression: Driver editing popover menu closes while still hovered 2023-03-13 16:55:06 +01:00
Member

Appears to be related to my #105387 because if I undo that it behaves as before. But the behavior before seems a bit odd.

In 3.4, bringing up this same context menu - that includes "New Driver" the mouse cursor shows as a left-right move one (the one used for the node's size entries) the entire time. I wonder if that is clue.

Appears to be related to my #105387 because if I undo that it behaves as before. But the behavior before seems a bit odd. In 3.4, bringing up this same context menu - that includes "New Driver" the mouse cursor shows as a left-right move one (the one used for the node's size entries) the entire time. I wonder if that is clue.
Member

This is making some sense. Looks like I can get this working while still having the previous things working (popover context menu items like "reset to defaults", popover eyedropper, new image eyedropper). But so far not looking like it would be simple enough that would not require review.

This is making some sense. Looks like I can get this working while still having the previous things working (popover context menu items like "reset to defaults", popover eyedropper, new image eyedropper). But so far not looking like it would be simple enough that would not require review.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-14 16:27:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105726
No description provided.