Fix #105726: Driver Editing Popover Menu Closing

Allow specifying a specific region to check for active button. This is
required in some circumstances, like Driver Popover.

Pull Request: https://projects.blender.org/blender/blender/pulls/105746